--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
   docker:
     image: docker:dind
     privileged: true
+    ports:
+      - "5000:5000" 
     environment:
       DOCKER_TLS_CERTDIR: ""
     volumes:
