--- a/minikube-vagrant-ansible/Vagrantfile
+++ b/minikube-vagrant-ansible/Vagrantfile
@@ -2,7 +2,10 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"   # Ubuntu 20.04
   config.vm.hostname = "minikube-vm"
   config.vm.boot_timeout = 600
-  config.vm.network "forwarded_port", guest: 8080, host: 8080
+  config.ssh.connect_timeout = 60
+  config.vm.network "private_network", ip: "192.168.56.10"
+  config.vm.network "forwarded_port", guest: 8080, host: 8080, host_ip: "0.0.0.0"
+
 
 
   # VM resources
@@ -33,6 +36,19 @@ Vagrant.configure("2") do |config|
     sudo mv minikube /usr/local/bin/minikube
 
     echo "Starting Minikube with Docker driver..."
-    sudo -u vagrant minikube start --driver=docker
+    sudo -u vagrant minikube start --driver=docker --container-runtime=docker
+        echo "[+] Deploying Nginx inside Minikube..."
+    sudo -u vagrant kubectl create deployment nginx --image=nginx || true
+
+    echo "[+] Exposing Nginx as a Service (NodePort)..."
+    sudo -u vagrant kubectl expose deployment nginx --type=NodePort --port=80 || true
+
+    echo "[+] Waiting for Nginx pod to be ready..."
+    sudo -u vagrant kubectl wait --for=condition=ready pod -l app=nginx --timeout=120s
+
+    echo "[+] Setting up port-forward (80 -> VM 8080 -> Host 8080)..."
+    sudo -u vagrant nohup kubectl port-forward --address 0.0.0.0 svc/nginx 8080:80 > /home/vagrant/nginx-forward.log 2>&1 &
+
+    echo "[+] Setup complete! Access Nginx at http://localhost:8080 on your host."
   SHELL
 end
