--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,50 +3,50 @@ Vagrant.configure("2") do |config|
   # ==========================
   # Jenkins VM
   # ==========================
-  config.vm.define "jenkins-vm" do |jenkins|
-    jenkins.vm.box = "ubuntu/focal64"
-    jenkins.vm.hostname = "jenkins-vm"
-    jenkins.vm.network "private_network", ip: "192.168.56.11"
-    jenkins.vm.network "forwarded_port", guest: 8080, host: 8081
-    jenkins.vm.provider "virtualbox" do |vb|
-      vb.memory = 2048
-      vb.cpus = 2
-    end
+  # config.vm.define "jenkins-vm" do |jenkins|
+  #   jenkins.vm.box = "ubuntu/focal64"
+  #   jenkins.vm.hostname = "jenkins-vm"
+  #   jenkins.vm.network "private_network", ip: "192.168.56.11"
+  #   jenkins.vm.network "forwarded_port", guest: 8080, host: 8081
+  #   jenkins.vm.provider "virtualbox" do |vb|
+  #     vb.memory = 2048
+  #     vb.cpus = 2
+  #   end
 
-    jenkins.vm.provision "shell", inline: <<-SHELL
-      echo "[+] Updating system packages..."
-      sudo apt update -y
+  #   jenkins.vm.provision "shell", inline: <<-SHELL
+  #     echo "[+] Updating system packages..."
+  #     sudo apt update -y
 
-      echo "[+] Installing required dependencies (fontconfig + Java 21)..."
-      sudo apt install -y fontconfig openjdk-21-jre wget gnupg
+  #     echo "[+] Installing required dependencies (fontconfig + Java 21)..."
+  #     sudo apt install -y fontconfig openjdk-21-jre wget gnupg
 
-      echo "[+] Adding Jenkins repository key..."
-      sudo mkdir -p /etc/apt/keyrings
-      sudo wget -O /etc/apt/keyrings/jenkins-keyring.asc https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
+  #     echo "[+] Adding Jenkins repository key..."
+  #     sudo mkdir -p /etc/apt/keyrings
+  #     sudo wget -O /etc/apt/keyrings/jenkins-keyring.asc https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
 
-      echo "[+] Adding Jenkins repository..."
-      echo "deb [signed-by=/etc/apt/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
+  #     echo "[+] Adding Jenkins repository..."
+  #     echo "deb [signed-by=/etc/apt/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
 
-      echo "[+] Updating package list..."
-      sudo apt-get update -y
+  #     echo "[+] Updating package list..."
+  #     sudo apt-get update -y
 
-      echo "[+] Installing Jenkins..."
-      sudo apt-get install -y jenkins
+  #     echo "[+] Installing Jenkins..."
+  #     sudo apt-get install -y jenkins
 
-      echo "[+] Enabling and starting Jenkins service..."
-      sudo systemctl enable jenkins
-      sudo systemctl start jenkins
+  #     echo "[+] Enabling and starting Jenkins service..."
+  #     sudo systemctl enable jenkins
+  #     sudo systemctl start jenkins
 
-      echo "[+] Jenkins setup completed!"
-      echo "Access Jenkins at: http://localhost:8081"
-      echo "[+] Getting Jenkins initial password..."
-      sudo cat /var/lib/jenkins/secrets/initialAdminPassword
-    SHELL
-  end
+  #     echo "[+] Jenkins setup completed!"
+  #     echo "Access Jenkins at: http://localhost:8081"
+  #     echo "[+] Getting Jenkins initial password..."
+  #     sudo cat /var/lib/jenkins/secrets/initialAdminPassword
+  #   SHELL
+  # end
 
-  # ==========================
-  # Minikube VM
-  # ==========================
+  # # ==========================
+  # # Minikube VM
+  # # ==========================
   config.vm.define "minikube-vm" do |minikube|
     minikube.vm.box = "ubuntu/focal64"
     minikube.vm.hostname = "minikube-vm"
